ALM-295 corrected spacing issues around graphs and titles

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1299,7 +1299,7 @@ span.next {
 }
 
 .visualizations-list {
-  margin: 4px 0 4px 35px;
+  margin: 48px 0 4px 35px;
   display: inline-block;
   position: relative;
 }
